--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.15",
+    "framer-motion": "^9.0.3",
     "next": "^13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hot-toast": "^2.4.0"
+    "react-hot-toast": "^2.4.0",
+    "react-simple-typewriter": "^5.0.1",
+    "react-social-icons": "^5.15.0"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
