--- a/package.json
+++ b/package.json
@@ -6,14 +6,23 @@
     "start": "next start"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.15",
+    "@heroicons/react": "^2.0.16",
+    "@react-three/drei": "^9.56.25",
+    "@react-three/fiber": "^8.11.2",
+    "@types/three": "^0.149.0",
+    "drei": "^1.0.0",
     "framer-motion": "^9.0.3",
+    "maath": "^0.5.2",
+    "math-random": "^2.0.1",
     "next": "^13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.1",
     "react-hot-toast": "^2.4.0",
     "react-simple-typewriter": "^5.0.1",
-    "react-social-icons": "^5.15.0"
+    "react-social-icons": "^5.15.0",
+    "three": "^0.149.0",
+    "three-globe": "^2.25.4"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
@@ -21,6 +30,7 @@
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
+    "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   }
