removed unused npm packages

--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
     "@react-three/drei": "^9.56.25",
     "@react-three/fiber": "^8.11.2",
     "@types/three": "^0.149.0",
-    "drei": "^1.0.0",
     "framer-motion": "^9.0.3",
     "maath": "^0.5.2",
-    "math-random": "^2.0.1",
     "next": "^13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -21,8 +19,7 @@
     "react-hot-toast": "^2.4.0",
     "react-simple-typewriter": "^5.0.1",
     "react-social-icons": "^5.15.0",
-    "three": "^0.149.0",
-    "three-globe": "^2.25.4"
+    "three": "^0.149.0"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
