--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "three": "^0.149.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
