--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,12 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "paths": {
+      "@/*": ["./*"]
+    }
   },
+  
   "include": [
     "next-env.d.ts",
     "**/*.ts",
