--- a/package.json
+++ b/package.json
@@ -7,20 +7,31 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@react-three/drei": "^9.56.25",
     "@react-three/fiber": "^8.11.2",
     "@types/three": "^0.149.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "embla-carousel-react": "^8.0.0-rc18",
     "framer-motion": "^9.0.3",
     "maath": "^0.5.2",
     "next": "^13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.1",
+    "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.0",
     "react-scroll": "^1.8.9",
     "react-simple-typewriter": "^5.0.1",
     "react-social-icons": "^5.15.0",
-    "three": "^0.149.0"
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.149.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
