added vercel analytics

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-three/fiber": "^8.15.13",
     "@react-three/postprocessing": "^2.15.11",
     "@types/three": "^0.160.0",
+    "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
